0.1655
    - added experimental update_param and insert_param
    - remove experimental DBIx::Custom::Model relation
0.1654
    - selection can contain where clause.
0.1653
    - added experimental DBIx::Custom::Result remove_filter()
    - added experimental DBIx::Custom::Result remove_end_filter()
    - added experimental DBIx::Custom::Model insert_at()
    - added experimental insert_at()
    - improved error message
0.1652
    - all filter can receive array reference and receiving hash reference is DEPRECATED!
0.1651
    - add experimental DBIx::Custom::Model filter attribute.
0.1650
    - add experimental DBIx::Custom::Model name() attribute
0.1649
    - add experimental DBIx::Custom::Model column_clause() method.
    - select method column option can receive string.
    - DBIx::Custom::Model select() and select_at() think about relation attirbute
0.1648
    - add experimental DBIx::Custom::Model relation() attribute
    - add experimental update_at(), delete_at(), select_at()
    - add experimental setup_model()
    - add experimental DBIx::Custom::Model columns attirbute
    - add experimental DBIx::Custom::Model foreign_key() attribute 
    - add experimental models() attribute
0.1647
    - add default_dbi_option()
0.1646
    - add feture. all model class in namespace is included by include_model
    - rename experimental include_table to include_model
    - rename experimental table to model
    - rename experimental DBIx::Custom::Table to DBIx::Custom::Model
    - remame experimental DBIx::Custom::Table::name() to DBIx::Custom::Model::table();
0.1645
    - removed experimental base_table() for class expandability.
    - experimental table() can't set table object any more.
    - added experimental include_table().
0.1644
    - update pod
0.1643
    - add experimental selection option to select()
    - add experimental table tag
    - fix bug : filter can't overwirite undef value.
    - add experimental feature to apply_filter(). you can apply end filter.